--- a/cv.tex
+++ b/cv.tex
@@ -143,7 +143,7 @@
 %----------------------------------------------------------------------------------------
 \section{Interests}
 
-Programming Languages, Networks and Systems, Security, Web-Dev, NLP
+Programming Languages, Networks and Systems, Security, Web-Development, Natural Language Processing
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION
@@ -293,7 +293,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
                   \item Circumvented runtime support by implementing static types and type annotations.
                   \item Implemented first class functions, anonymous functions, nested function scopes and recursion.
                   \item Implemented an end-to-end ECMAScript 5.1 compiler for the MIPS architecture with support for first class
-                      functions. anonymous functions, static types, type annotations, recursion and nested functions.
+                      functions, anonymous functions, static types, type annotations, recursion and nested functions.
                   \item \href{https://github.com/srijanshetty/javascript-compiler} {https://github.com/srijanshetty/javascript-compiler}
               \end{itemize}
           }
@@ -405,25 +405,26 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
 
           }
 
+\lproject {Winter 2012-2013}
+          {Lawn Mower}
+          {\textsc{Manufacturing Process II}, Professor Sounak K. Choudhury}
+          {
+               \begin{itemize}[leftmargin=0.5cm]
+                   \item Designed a model for a simple Lawn Mower in AutoCAD which could convert translatory force applied to it
+                       into rotatory motion of its blades.
+                   \item Prototyped the design over the course of six week using mechanical processes.
+                   \item Selected as one of the top 15 projects in over 60 completed projects.
+               \end{itemize}
+           }
+
+
 \lproject {Monsoon 2012-2013}
           {Batmobile}
           {\textsc{Manufacturing Process I}, Professor Kallol Mondal}
           {
                \begin{itemize}[leftmargin=0.5cm]
                    \item Designed a model for the Batmobile as seen in The Dark Knight Series, in AutoCAD.
-                   \item Prototyped the design over the course of six week using meturllurgical processses.
-               \end{itemize}
-           }
-
-\lproject {Winter 2012-2013}
-          {Lawn Mower}
-          {\textsc{Manufacturing Process II}, Professor Sounak K. Choudhury}
-          {
-               \begin{itemize}[leftmargin=0.5cm]
-                   \item Designed a model for a Simple Lawn Mower which could convert translatory force applied to it
-                       into rotatory motion of it's blades, in AutoCAD.
-                   \item Prototyped the design over the course of six week using mechanical processses.
-                   \item Selected as one of the top 15 projects in over 60 completed projects.
+                   \item Prototyped the design over the course of six week using metallurgical processes.
                \end{itemize}
            }
 
@@ -432,7 +433,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
           {\textsc{Introduction to Philosophy}, Professor Vineet Sahu}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item Illustrated the existence of a fundamental similarity in all situtations by a gross simplification.
+                   \item Illustrated the existence of a fundamental similarity in all situations by a gross simplification.
                    \item Justified the use certain moral principles across all situations by leveraging the above stated hypothesis.
                \end{itemize}
            }
@@ -474,7 +475,7 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
                   \item Designed a web application to select a music track from a user's music library based on his current running speed.
                   \item Pitched the idea at \textbf{Yahoo! HackU 2013}.
                   \item Received an honourable mention in \textbf{Yahoo!  HackU 2013} for the created hack.
-                  \item Pitched ShuffleRun --- a music player which selects tracks on the basis of the user's running speed to recieve
+                  \item Pitched ShuffleRun --- a music player which selects tracks on the basis of the user's running speed to receive
                       and honourable mention at \textbf{Yahoo! HackU 2013}.
                   \item \href{https://github.com/srijanshetty/ShuffleRun} {https://github.com/srijanshetty/ShuffleRun}
               \end{itemize}
@@ -569,9 +570,9 @@ Programming Languages, Networks and Systems, Security, Web-Dev, NLP
                         thousand volunteers.
                     \item Oversaw the hospitality arrangements of the 1800 participants.
                     \item Initiated and organized Mr. \& Ms. Fresher's competition as an Antaragni Initiative for the freshmen.
-                    \item Introduced Chreo Nite to the arsenal of competitions held in Antaragni.
+                    \item Introduced Choreo Nite to the arsenal of competitions held in Antaragni.
                     \item Promoted Road Safety as a part of the social campaign of Antaragni -- Zara Sambhal Ke by conducting
-                        public polls and spreading general awarness about the same.
+                        public polls and spreading general awareness about the same.
                     \item Publicized Antaragni on social media platforms by contributing creative content.
                \end{itemize}
           }
