--- a/cv.tex
+++ b/cv.tex
@@ -230,8 +230,6 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
       {Research Intern at \textsc{Microsoft Research India}, Bangalore}
       {
          \begin{itemize}[leftmargin=*]
-             \item CScale provides a declarative distributed systems programming model using LINQ. A programmer with no distributed system
-                 experience can specify the computation intent in LINQ and CScale handles scaling the system and fault tolerance.
              \item Analysed the implementations of different distributed systems and databases architectures like
                  \textbf{Google MapReduce}, \textbf{Google FileSystem}, \textbf{Google MillWheel} \textbf{Yahoo! PNUTS},
                  \textbf{Amazon DynamoDB}, \textbf{Apache Kafka}, \textbf{Apache Spark}, \textbf{Apache Hadoop}, \textbf{Apache Storm},
@@ -281,8 +279,7 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
           {
               \begin{itemize}[leftmargin=0.5cm]
                   \item Implemented an end-to-end ECMAScript 5.1 compiler for the MIPS architecture with support for first class
-                      functions, anonymous functions, static types, type annotations, recursion and nested functions.
-                  \item \href{https://github.com/srijanshetty/javascript-compiler} {https://github.com/srijanshetty/javascript-compiler}
+                      functions, anonymous functions, static types, type annotations, recursion and nested functions.  \href{https://github.com/srijanshetty/javascript-compiler} {[Repository]}
               \end{itemize}
           }
 
@@ -296,7 +293,6 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                  \item Selected as one of the top seven projects at the end of the term.
                  \item Generated a Hindi literature corpus consisting of works by Rabindranath Tagore,
                      Vibhuti Narayan, Premchand, Sarat Chandra Chattopadhyay and Dhamarvir Bharati.
-                 \item Used Unigrams, Bigrams and Trigrams as features for clustering.
                  \item Clustered a sample set of multiple Hindi authors using K-means unsupervised clustering to achieve
                      F-scores in the range of 90-97\% for each author.
                  \item Classified each author using Support Vector Machine Classification using Radial Basis Kernel function
@@ -304,7 +300,7 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                  \item Performed Multiple Discriminant Analysis on the data for a quantitative comparison with word
                      collocations; there was no appreciable difference in the results with the F-scores increasing only
                      marginally.
-                 \item \href{https://github.com/srijanshetty/author-attribution}{https://github.com/srijanshetty/author-attribution}
+                 \item \href{https://github.com/srijanshetty/author-attribution}{[Repository]}
              \end{itemize}
          }
 
@@ -315,13 +311,13 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
              \begin{itemize}[leftmargin=0.5cm]
                  \item Extended the standard system call library of NachOS and implemented system calls pertaining to Fork, Exec,
                      Join, Yield, Sleep and Exit.
-                     \href{https://github.com/srijanshetty/nachos-syscalls/}{https://github.com/srijanshetty/nachos-syscalls/}
+                     \href{https://github.com/srijanshetty/nachos-syscalls/}{[Repository]}
                  \item Implemented process scheduling algorithms: UNIX Scheduling, First in First Out,
                      Round Robin, Shortest Job First and Non-pre-emptive job scheduling to assess their relative performances.
-                     \href{https://github.com/srijanshetty/nachos-scheduling}{https://github.com/srijanshetty/nachos-scheduling}
+                     \href{https://github.com/srijanshetty/nachos-scheduling}{[Repository]}
                  \item Programmed page replacement algorithms: Random Page Allocation, First in First Out,
                      Least Recently Used(LRU) and LRU Clock to evaluate relative performances under difference scenarios.
-                     \href{https://github.com/srijanshetty/nachos-final/}{https://github.com/srijanshetty/nachos-final/}
+                     \href{https://github.com/srijanshetty/nachos-final/}{[Repository]}
               \end{itemize}
           }
 
@@ -331,8 +327,7 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
           {
              \begin{itemize}[leftmargin=0.5cm]
                  \item Conceived and implemented a peer-to-peer protocol for file and media transfer in Node.js to share
-                     data over the institute LAN.
-                 \item \href{https://github.com/srijanshetty/nodesock}{https://github.com/srijanshetty/nodesock}
+                     data over the institute LAN.  \href{https://github.com/srijanshetty/nodesock}{[Repository]}
              \end{itemize}
           }
 
@@ -374,21 +369,10 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
           {
               \begin{itemize}[leftmargin=0.5cm]
                    \item Developed a python based web crawler to crawl paper submission deadlines for a given paper using BeautifulSoup and
-                       urllib.
-                   \href{https://github.com/srijanshetty/crawler} {https://github.com/srijanshetty/crawler}
+                       urllib.  \href{https://github.com/srijanshetty/crawler} {[Repository]}
               \end{itemize}
 
           }
-
-\lproject {Monsoon 2011-2012}
-          {No situation is unique and certain moral principles can be applied across all situation}
-          {\textsc{Introduction to Philosophy}, Professor Vineet Sahu}
-          {
-               \begin{itemize}[leftmargin=0.5cm]
-                   \item Illustrated the existence of a fundamental similarity in all situations by a gross simplification.
-                   \item Justified the use certain moral principles across all situations by leveraging the above stated hypothesis.
-               \end{itemize}
-           }
 
 %----------------------------------------------------------------------------------------
 %  INDEPENDENT PROJECTS
@@ -400,8 +384,7 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
           {
                \begin{itemize}[leftmargin=0.5cm]
                    \item Scraped the institute academic records to create a database of all courses offered by the institute to create an
-                       AngularJS based course search over the existing legacy course search.
-                   \item \href{https://navya.github.io/oars}{https://navya.github.io/oars}
+                       AngularJS based course search over the existing legacy course search.  \href{https://navya.github.io/oars}{[Website]}
                \end{itemize}
            }
 
@@ -410,8 +393,7 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
           {
                \begin{itemize}[leftmargin=0.5cm]
                    \item Eased the process of creating minimalistic websites for not-so-tech-savvy students by creating a WYSIWG website
-                       editor.
-                   \item \href{http://gyph2.herokuapp.com/} {http://gyph2.herokuapp.com/}
+                       editor.  \href{http://gyph2.herokuapp.com/} {[Website]}
                \end{itemize}
            }
 
@@ -420,8 +402,7 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
           {
               \begin{itemize}[leftmargin=0.5cm]
                   \item Pitched ShuffleRun --- a music player which selects tracks on the basis of the user's running speed to receive
-                      and honourable mention at \textbf{Yahoo! HackU 2013}.
-                  \item \href{https://github.com/srijanshetty/ShuffleRun} {https://github.com/srijanshetty/ShuffleRun}
+                      and honourable mention at \textbf{Yahoo! HackU 2013}.  \href{https://github.com/srijanshetty/ShuffleRun} {[Repository]}
               \end{itemize}
           }
 
@@ -443,7 +424,7 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
               \begin{itemize}[leftmargin=0.5cm]
                   \item Explored and documented the various facets of \textbf{GNU/Linux} like the file system, process management, memory management,
                       shell interface etc to serve as a reference for the Student Community.
-                  \item \href{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}
+                      \href{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}{[Documentation]}
               \end{itemize}
           }
 
@@ -551,23 +532,14 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
 \skill {2012 -- 2013}
        {Secretary, English Literary Society}
 
-\skill {2011 -- 2012}
-       {3$^{rd}$ prize, Essay Writing Competition, Spectrum '11}
-
 \skill {2010 -- 2011}
        {Basic training in \textbf{Indian Classical Music}. (Prayag Sangeet Samiti Allahabad).}
 
 \skill {2009}
        {Qualified for the semi-finals of \textbf{Outlook SpeakOut Debate}.}
 
-\skill {2007 -- 2008}
-       {Class Prefect, Ninth Grade.}
-
 \skill {2005 -- 2006}
        {House Captain, Einstein House.}
-
-\skill {2000 -- 2001}
-       {Class Prefect, Second Grade.}
 
 %----------------------------------------------------------------------------------------
 %   COMMUNITY SERVICE
@@ -623,27 +595,5 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                        freedom fighters and to instil patriotism in the residents of IIT Kanpur.
                \end{itemize}
           }
-
-%----------------------------------------------------------------------------------------
-%   COURSE WORK
-%----------------------------------------------------------------------------------------
-
-\section{Course Work}
-
-\begin{center}
-    \begin{tabular}{>{\raggedleft}p{8cm}|p{8cm}}
-
-        Theory of Computation (CS340) & (CS201) Discreet Mathematics \\
-        Abstract Algebra (CS203A) & (CS202A) Logic for Computer Science \\
-        Data Structure and Algorithms (CS210) & (CS345) Design and Analysis of Algorithms \\
-        Operating Systems (CS330) & (CS335) Compilers \\
-        Computer Networks (CS425) &  (CS628) Computer and Internet Security \\
-        Computer Organization (CS220) & (CS350) Principles of Programming Languages \\
-        Artificial Intelligence (CS365) & (CS251 \& CS252) Computing Laboratory \\
-        Computational Methods in Engineering (ESO208A) & (CS300) Technical Communication \\
-        Linear Algebra (MTH102) &  (MTH101) Multivariate Calculus \\
-        Microeconomics (ECO201) & (IME636) Introduction to Game Theory \\
-    \end{tabular}
-\end{center}
 
 \end{document}
